# aruco_gridboard

./: CMakeLists.txt  README.md  package.xml
data/: layout.yaml
launch/: detection.launch  detection_vrep.launch
src/: main.cpp  names.cpp  names.h  node.cpp  node.h
