<?xml version="1.0"?>
<package>
  <name>aruco_gridboard</name>
  <version>0.0.1</version>

  <description>Detect an aruco board and estimate the pose</description>
  <author>Giovanni Claudio</author>
  <maintainer email="Giovanni.Claudio@inria.fr">Giovanni Claudio</maintainer>
  <license>GPLv2</license>
  <url>http://wiki.ros.org/aruco_gridboard</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>cv_bridge</run_depend>
   <run_depend>image_geometry</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
